@@ -1,6 +1,20 @@
+/* Copyright (c) 2015 Jesper Öqvist <jesper@llbit.se>
+ *
+ * This file is part of Chunky.
+ *
+ * Chunky is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Chunky is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with Chunky.  If not, see <http://www.gnu.org/licenses/>.
+ */
 package se.llbit.chunky.renderer;
-
-import se.llbit.nbt.AnyTag;
 
 /**
  * Postprocessing modes
@@ -29,20 +43,8 @@ public enum Postprocess {
 
 	public static final Postprocess DEFAULT = GAMMA;
 
-	public static final Postprocess[] values = values();
-
-	public static Postprocess get(int index) {
-		index = Math.max(0, index);
-		index = Math.min(values.length-1, index);
-		return values[index];
-	}
-
-	public static Postprocess get(AnyTag tag) {
-		return get(tag.intValue(DEFAULT.ordinal()));
-	}
-
 	public static Postprocess get(String name) {
-		for (Postprocess mode: values) {
+		for (Postprocess mode : values()) {
 			if (mode.name().equals(name)) {
 				return mode;
 			}
