@@ -1,5 +1,6 @@
 1.3.6 - TBD
 
+* Changed the postprocess JSON variable to String.
 * Added black sky mode, useful for rendering an emitter-only pass.
 * Improved glass pane and iron bars rendering.
 * Added rendering for the following Minecraft 1.9 block types:
